--- a/angular.json
+++ b/angular.json
@@ -154,13 +154,13 @@
           "options": {
             "tsConfig": "projects/ngx-plyr/tsconfig.lib.json",
             "project": "projects/ngx-plyr/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/ngx-plyr/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -184,5 +184,8 @@
       }
     }
   },
-  "defaultProject": "ngx-plyr-app"
+  "defaultProject": "ngx-plyr-app",
+  "cli": {
+    "analytics": "020bb17b-011e-4768-a20c-cebffe9226a7"
+  }
 }
