--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2015",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -26,6 +26,7 @@
       "ngx-plyr/*": [
         "dist/ngx-plyr/*"
       ]
-    }
+    },
+    "useDefineForClassFields": false
   }
 }
