--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,21 +11,13 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "ngx-plyr": [
-        "dist/ngx-plyr"
-      ],
-      "ngx-plyr/*": [
-        "dist/ngx-plyr/*"
-      ]
+      "ngx-plyr": ["dist/ngx-plyr"],
+      "ngx-plyr/*": ["dist/ngx-plyr/*"]
     },
     "useDefineForClassFields": false
   }
